# xtalk

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  COSYVOICE_FUNASR_GUIDE.md  LICENSE  README.md  local_config.json  pyproject.toml
.github/: CODEOWNERS
.github/instructions/: instructions.md
.github/workflows/: file-check.yml  secret-check.yml
examples/sample_app/: configurable_server.py  custom_model.py  custom_service.py  echo_agent.py  mental_consultant_server.py
examples/sample_app/static/css/: index_modern.css
examples/sample_app/static/js/: index.js  index_modern.js
examples/sample_app/templates/: index.html  index_modern.html  simple_frontend.html
frontend/: .gitignore  package-lock.json  package.json  tsconfig.json  webpack.config.mjs
frontend/src/: index.js  vad-processor.js
frontend/src/js/: index.js
scripts/: batch_latency_measure.py  latency_measure_client.py
src/xtalk/: __init__.py  api.py  events.py  log_utils.py  model_types.py
src/xtalk/embeddings/: __init__.py
src/xtalk/llm/: __init__.py  dummy.py  qwen_local.py
src/xtalk/llm_agent/: __init__.py  default.py  dummy.py  interfaces.py  ollama.py
src/xtalk/llm_agent/tools/: __init__.py  pipeline_control.py  retrievers.py  utils.py
src/xtalk/pipelines/: __init__.py  context.py  default.py  interfaces.py
src/xtalk/rewriter/: __init__.py  interfaces.py  simple.py
src/xtalk/serving/: __init__.py  event_bus.py  events.py  interfaces.py  module_types.py  service.py  service_manager.py  session_limiter.py
src/xtalk/serving/modules/: asr_manager.py  captioner_manager.py  embeddings_manager.py  enhancer_manager.py  input_gateway.py  latency_manager.py  llm_agent_manager.py  output_gateway.py  recording_manager.py  retrieval_manager.py  speaker_manager.py  thought_manager.py  tts_manager.py  turn_taking_manager.py  vad_manager.py
src/xtalk/speech/: __init__.py  interfaces.py  utils.py
src/xtalk/speech/asr/: __init__.py  dummy.py  elevenlabs.py  mlx_funasr.py  paraformer_local.py  qwen3_asr_flash_realtime.py  sensevoice_small_local.py  sherpa_onnx_asr.py  zipformer_local.py
src/xtalk/speech/captioner/: __init__.py  qwen3_omni_captioner.py
src/xtalk/speech/punt_restorer/: __init__.py  ct_punt.py
(+27 files in other folders)
